--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "5.13.0",
+    "@prisma/client": "^6.17.1",
+    "@prisma/extension-accelerate": "^2.0.2",
     "clsx": "2.1.0",
-    "tailwind-merge": "2.2.1",
     "date-fns": "3.6.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "2.2.4",
+    "tailwind-merge": "2.2.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
@@ -34,7 +35,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "8.4.35",
-    "prisma": "5.13.0",
+    "prisma": "^5.13.0",
     "tailwindcss": "3.4.1",
     "ts-node": "10.9.1",
     "typescript": "5.3.3",
