--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fitfokus",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,7 +15,7 @@
     "test:e2e": "playwright test",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "ts-node prisma/seed.ts"
+    "prisma:seed": "node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
@@ -38,6 +41,7 @@
     "prisma": "^6.17.1",
     "tailwindcss": "3.4.1",
     "ts-node": "10.9.1",
+    "tsx": "^4.20.6",
     "typescript": "5.3.3",
     "vitest": "1.3.1"
   }
