--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "test:e2e": "playwright test",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "node prisma/seed.ts",
+    "prisma:seed": "prisma db seed",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
     "@prisma/extension-accelerate": "^2.0.2",
     "clsx": "2.1.0",
     "date-fns": "3.6.0",
-    "next-auth": "^5.0.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "2.2.4",
