--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next-auth/prisma-adapter": "1.0.6",
     "@prisma/client": "^6.17.1",
     "@prisma/extension-accelerate": "^2.0.2",
     "clsx": "2.1.0",
     "date-fns": "3.6.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.11",
+    "next-auth": "4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "2.2.4",
