--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "swr": "2.2.4",
     "tailwind-merge": "2.2.1",
+    "vercel": "^48.6.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
