Add workout completion celebration effects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "framer-motion": [
+        "./lib/framer-motion"
       ]
     },
     "resolveJsonModule": true,
