--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "clsx": "2.1.0",
     "date-fns": "3.6.0",
+    "lucide-react": "^0.555.0",
     "next": "14.1.0",
     "next-auth": "4.24.11",
     "react": "18.2.0",
